--- a/index.html
+++ b/index.html
@@ -116,57 +116,59 @@
       <h2>Skills</h2>
     </div>
     <div class="row">
+     <div class="col span-1-of-4 box">
+        <img src="resources/img/s3.jpeg" alt="Berlin">
+        <h3>Language</h3>
+        <div class="skill-feature">
+          <i class="ion-social-javascript-outline icon-small"></i> Java Script
+        </div>
+        <div class="skill-feature">
+          <i class="ion-social-javascript-outline icon-small"></i> Node.js
+        </div>
+        <div class="skill-feature">
+          <i class="ion-social-javascript icon-small"></i> Python
+        </div>
+        <div class="skill-feature">
+          <i class="ion-social-javascript-outline icon-small"></i> Swift
+        </div>
+      </div>
+      <div class="col span-1-of-4 box">
+        <img src="resources/img/s2.jpeg" alt="San Francisco">
+        <h3>Framework</h3>
+        <div class="skill-feature">
+          <i class="ion-ios-paw icon-small"></i> Angular4
+        </div>
+        <div class="skill-feature">
+          <i class="ion-ios-paw-outline icon-small"></i> Express
+        </div>
+        <div class="skill-feature">
+          <i class="ion-ios-paw icon-small"></i> Django
+        </div>
+        <div class="skill-feature">
+          <i class="ion-ios-paw-outline icon-small"></i> Flask
+        </div>
+      </div>
       <div class="col span-1-of-4 box">
         <img src="resources/img/s4.jpeg" alt="Lisbon">
-        <h3>Web Fun</h3>
+        <h3>Front-End Development</h3>
         <div class="skill-feature">
           <i class="ion-load-d icon-small"></i> Responsive Web Design
         </div>
         <div class="skill-feature">
           <i class="ion-load-d icon-small"></i> JQuery
         </div>
-
-      </div>
-      <div class="col span-1-of-4 box">
-        <img src="resources/img/s2.jpeg" alt="San Francisco">
-        <h3>Python</h3>
         <div class="skill-feature">
-          <i class="ion-ios-paw icon-small"></i> Flask
-        </div>
-        <div class="skill-feature">
-          <i class="ion-ios-paw-outline icon-small"></i> Django
-        </div>
-        <div class="skill-feature">
-          <i class="ion-ios-paw icon-small"></i> MySQL
-        </div>
-        <div class="skill-feature">
-          <i class="ion-ios-paw-outline icon-small"></i>
-        </div>
-      </div>
-      <div class="col span-1-of-4 box">
-        <img src="resources/img/s3.jpeg" alt="Berlin">
-        <h3>Java Script</h3>
-        <div class="skill-feature">
-          <i class="ion-social-javascript-outline icon-small"></i> MongoDB
-        </div>
-        <div class="skill-feature">
-          <i class="ion-social-javascript icon-small"></i> ExpressJS
-        </div>
-        <div class="skill-feature">
-          <i class="ion-social-javascript-outline icon-small"></i> AngularJS
-        </div>
-        <div class="skill-feature">
-          <i class="ion-social-javascript icon-small"></i> NodeJS
+          <i class="ion-load-d icon-small"></i> HTTP Request/Response
         </div>
       </div>
       <div class="col span-1-of-4 box">
         <img src="resources/img/s1.jpeg" alt="London">
-        <h3>IOS</h3>
+        <h3>Library</h3>
         <div class="skill-feature">
-          <i class="ion-ios-paw icon-small"></i> Swift
+          <i class="ion-ios-paw icon-small"></i> Jquery
         </div>
         <div class="skill-feature">
-          <i class="ion-ios-paw-outline icon-small"></i>
+          <i class="ion-ios-paw-outline icon-small"></i> Socket.io
         </div>
       </div>
     </div>
@@ -261,25 +263,25 @@
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdqztSOs8mnf8hEn80ymCn7ORbxmdi29c&callback=initMap">
     </script>
 
-    </div>
+   
   </section>
 
   <footer>
     <div class="row">
-      <h3>Contact me through Webs</h3>&nbsp;
+      <h2>Contact me through Webs</h2>&nbsp;
       <ul class="social-links">
         <li><a href="https://github.com/emilyhuanyingyu?tab=repositories"><i class="ion-social-github"></i></a></li>
         <li><a href="https://www.linkedin.com/feed/"><i class="ion-social-linkedin-outline"></i></a></li>
         <li><a href="mailto:yuuamelie@gmail.com"><i class="ion-email"></i></a></li>
       </ul>
     </div>
-    <div class="row">
-      <p>
-        COPYRIGHT &copy;
-        <i class="fas fa-cog fa-spin"></i> EMILY YU 2018
-      </p>
-    </div>
   </footer>
+  <div class="bottom">
+    <p>
+      COPYRIGHT &copy;
+      <i class="fas fa-cog fa-spin"></i> EMILY YU 2018
+    </p>
+  </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="//cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
