--- a/index.html
+++ b/index.html
@@ -116,27 +116,42 @@
       <h2>Skills</h2>
     </div>
     <div class="row">
-     <div class="col span-1-of-4 box">
+     <div class="col span-1-of-3 box">
         <img src="resources/img/s3.jpeg" alt="Berlin">
         <h3>Language</h3>
         <div class="skill-feature">
-          <i class="ion-social-javascript-outline icon-small"></i> Java Script
+          <i class="ion-ios-paw icon-small"></i> JavaScript ES5/ES6
         </div>
         <div class="skill-feature">
-          <i class="ion-social-javascript-outline icon-small"></i> Node.js
+          <i class="ion-ios-paw-outline icon-small"></i> HTML 5
         </div>
         <div class="skill-feature">
-          <i class="ion-social-javascript icon-small"></i> Python
+          <i class="ion-ios-paw icon-small"></i> CSS 3
         </div>
         <div class="skill-feature">
-          <i class="ion-social-javascript-outline icon-small"></i> Swift
+          <i class="ion-ios-paw-outline icon-small"></i> Node.js
+        </div>
+        <div class="skill-feature">
+          <i class="ion-ios-paw icon-small"></i> Python
+        </div>
+        <div class="skill-feature">
+          <i class="ion-ios-paw-outline icon-small"></i> Swift 4
+        </div>
+        <div class="skill-feature">
+          <i class="ion-ios-paw icon-small"></i> SASS
+        </div>
+        <div class="skill-feature">
+          <i class="ion-ios-paw-outline icon-small"></i> LESS
         </div>
       </div>
-      <div class="col span-1-of-4 box">
+      <div class="col span-1-of-3 box">
         <img src="resources/img/s2.jpeg" alt="San Francisco">
         <h3>Framework</h3>
         <div class="skill-feature">
-          <i class="ion-ios-paw icon-small"></i> Angular4
+          <i class="ion-ios-paw-outline icon-small"></i> Angular 4
+        </div>
+        <div class="skill-feature">
+          <i class="ion-ios-paw icon-small"></i> React
         </div>
         <div class="skill-feature">
           <i class="ion-ios-paw-outline icon-small"></i> Express
@@ -148,27 +163,94 @@
           <i class="ion-ios-paw-outline icon-small"></i> Flask
         </div>
       </div>
-      <div class="col span-1-of-4 box">
-        <img src="resources/img/s4.jpeg" alt="Lisbon">
-        <h3>Front-End Development</h3>
+      <div class="col span-1-of-3 box">
+        <img src="resources/img/s3.jpeg" alt="Berlin">
+        <h3>Methodology</h3>
         <div class="skill-feature">
-          <i class="ion-load-d icon-small"></i> Responsive Web Design
+          <i class="ion-ios-paw icon-small"></i> Responsive Web Design
         </div>
+        <div class="skill-feature">
+          <i class="ion-ios-paw-outline icon-small"></i> OOP
+        </div>
+        <div class="skill-feature">
+          <i class="ion-ios-paw icon-small"></i> MVC
+        </div>
+        <div class="skill-feature">
+          <i class="ion-ios-paw-outline icon-small"></i> RESTful Architecture
+        </div>
+        <div class="skill-feature">
+          <i class="ion-ios-paw icon-small"></i> CRUD Operations
+        </div>
+      </div>
+      
+    </div>
+    
+    <div class="row">
+    <div class="col span-1-of-4 box">
+        <img src="resources/img/s4.jpeg" alt="Lisbon">
+        <h3>Library</h3>
         <div class="skill-feature">
           <i class="ion-load-d icon-small"></i> JQuery
         </div>
         <div class="skill-feature">
-          <i class="ion-load-d icon-small"></i> HTTP Request/Response
+          <i class="ion-load-d icon-small"></i> Socket.io
+        </div>
+        <div class="skill-feature">
+          <i class="ion-load-d icon-small"></i> Bootstrap
         </div>
       </div>
       <div class="col span-1-of-4 box">
         <img src="resources/img/s1.jpeg" alt="London">
-        <h3>Library</h3>
+        <h3>Database</h3>
         <div class="skill-feature">
-          <i class="ion-ios-paw icon-small"></i> Jquery
+          <i class="ion-load-d icon-small"></i> MongoDB
         </div>
         <div class="skill-feature">
-          <i class="ion-ios-paw-outline icon-small"></i> Socket.io
+          <i class="ion-load-d icon-small"></i> MySQL
+        </div>
+        <div class="skill-feature">
+          <i class="ion-load-d icon-small"></i> SQLite
+        </div>
+        <div class="skill-feature">
+          <i class="ion-load-d icon-small"></i> CoreData
+        </div>
+      </div>
+    <div class="col span-1-of-4 box">
+        <img src="resources/img/s2.jpeg" alt="San Francisco">
+        <h3>Development Tools</h3>
+        <div class="skill-feature">
+          <i class="ion-load-d icon-small"></i> AWS
+        </div>
+        <div class="skill-feature">
+          <i class="ion-load-d icon-small"></i> Terminal
+        </div>
+        <div class="skill-feature">
+          <i class="ion-load-d icon-small"></i> VS code
+        </div>
+        <div class="skill-feature">
+          <i class="ion-load-d icon-small"></i> Xcode
+        </div>
+        <div class="skill-feature">
+          <i class="ion-load-d icon-small"></i> Vim
+        </div>
+        <div class="skill-feature">
+          <i class="ion-load-d icon-small"></i> Git/Github
+        </div>
+      </div>
+      <div class="col span-1-of-4 box">
+        <img src="resources/img/s4.jpeg" alt="Lisbon">
+        <h3>Web Tech</h3>
+        <div class="skill-feature">
+          <i class="ion-load-d icon-small"></i> HTTP
+        </div>
+        <div class="skill-feature">
+          <i class="ion-load-d icon-small"></i> HTTPS
+        </div>
+        <div class="skill-feature">
+          <i class="ion-load-d icon-small"></i> AJAX
+        </div>
+        <div class="skill-feature">
+          <i class="ion-load-d icon-small"></i> API
         </div>
       </div>
     </div>
