--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
     <div class="row contact">
       
       <div class="col span-1-of-3">
-        <a href="https://github.com/emilyhuanyingyu"><i class="fas ion-social-linkedin-outline fa-3x"></i></a>
+        <a href="https://www.linkedin.com/feed/"><i class="fas ion-social-linkedin-outline fa-3x"></i></a>
         <p>
           <a href="https://github.com/emilyhuanyingyu">
           @Emily Huanying Yu
