--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
     <div class="row contact">
       
       <div class="col span-1-of-3">
-        <a href="https://www.linkedin.com/feed/"><i class="fas ion-social-linkedin-outline fa-3x"></i></a>
+        <a href="https://www.linkedin.com/in/emilyhuanyingyu/"><i class="fas ion-social-linkedin-outline fa-3x"></i></a>
         <p>
           <a href="https://github.com/emilyhuanyingyu">
           @Emily Huanying Yu
@@ -335,7 +335,7 @@
       <h2>Contact me through Webs</h2>&nbsp;
       <ul class="social-links">
         <li><a href="https://github.com/emilyhuanyingyu?tab=repositories"><i class="ion-social-github fa-1x"></i></a></li>
-        <li><a href="https://www.linkedin.com/feed/"><i class="ion-social-linkedin-outline fa-1x"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/emilyhuanyingyu/"><i class="ion-social-linkedin-outline fa-1x"></i></a></li>
         <li><a href="mailto:yuuamelie@gmail.com"><i class="ion-email  fa-1x"></i></a></li>
       </ul>
     </div>
