--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
       <div class="col span-1-of-3">
         <a href="https://www.linkedin.com/in/emilyhuanyingyu/"><i class="fas ion-social-linkedin-outline fa-3x"></i></a>
         <p>
-          <a href="https://github.com/emilyhuanyingyu">
+          <a href="https://www.linkedin.com/in/emilyhuanyingyu/">
           @Emily Huanying Yu
           </a>
         </p>
