--- a/index.html
+++ b/index.html
@@ -100,22 +100,33 @@
       <h2>Projects</h2>
     </div>
     <div class="row project-showcase">
-      <div class="col span-1-of-3 project-photo">
+      <div class="project-photo">
         <img src="resources/img/sailing.png"><br>
         <h4>Deployed link: <a href="https://greatpondyachtclubwsp.com">Great Pond Yacht Club women’s learn-to-sail program</a></h4><br>
+        <h4>Great Pond Yacht Club women’s learn-to-sail program. Captains are offering the sailing instruction on the day and time listed on the events calendar. Students can put a request for a captain on the calendar by clicking on the day number within the calendar that they are hoping to sail. </h4><br>
         <ul>
           <li>Implement Single Page ApplicaKon by Angular 5.</li>
           <li>Display and deal with all sailing events that created by captains or students (FullCalendar).</li>
           <li>Display contents in different devices responsively (CSS grid system).</li>
           <li>Allow users to create and join events (MongoDB Many-to-Many relaKonship).</li>
         </ul>
+        
       </div>
-      <div class="col span-1-of-3 project-photo">
+      <div class="project-photo">
+        <img src="resources/img/learnup.png">
+        
+        <h4>Github link: <a href="https://github.com/emilyhuanyingyu/LearnUpProject">LearnUp Teaching Platform</a></h4><br>
+        <h4>Web app designed for a nonprofit organization in order to teach dyslexic children how to read using phonics. 
+          </h4><br>
+        <ul>
+          <li>Feature movable titles with web sockets for live instruction</li>
+          <li>Use socket.io to display online, offline or not paying attention indication to teachers and students automatically</li>
+          <li>Implement users with admin or user account systems</li>
+        </ul>
+      </div>
+      <!-- <div class="col span-1-of-3 project-photo">
         <img src="resources/img/1.jpg">
-      </div>
-      <div class="col span-1-of-3 project-photo">
-        <img src="resources/img/1.jpg">
-      </div>
+      </div> -->
     </div>
   </section>
 
@@ -346,6 +357,7 @@
       <i class="fas fa-cog fa-spin"></i> EMILY YU 2018
     </p>
   </div>
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="//cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
