--- a/index.html
+++ b/index.html
@@ -126,39 +126,42 @@
         <img src="resources/img/sailing.png">
         <br>
         <h2>Great Pond Yacht Club women’s learn-to-sail program</h2>
-        <h4>In this program, captains are offering the sailing instruction on the day and time listed on the events calendar, and students can put a request for a captain on the calendar by clicking on the day number within the calendar that they are hoping to sail. </h4>
-       
+        <h4>In this program, captains are offering the sailing instruction on the day and time listed on the events calendar,
+          and students can put a request for a captain on the calendar by clicking on the day number within the calendar
+          that they are hoping to sail. </h4>
+
         <ul>
           <li>Implement Single Page ApplicaKon by Angular 5.</li>
           <li>Integrated FullCalendar to display all sailing events that created by captains or students
-            </li>
+          </li>
           <li>Display contents in different devices responsively (CSS grid system).</li>
           <li>Allow users to create and join events (MongoDB Many-to-Many relaKonship).</li>
         </ul>
         <div class="links">
-            <a href="https://greatpondyachtclubwsp.com">Deployed link</a>
-            <a href="https://www.youtube.com/watch?v=FEyNfYxZHls">Video link</a>  
-            <a href="https://github.com/emilyhuanyingyu/Captain_Group">Github link</a>   
-          </div>
+          <a href="https://greatpondyachtclubwsp.com">Deployed link</a>
+          <a href="https://www.youtube.com/watch?v=FEyNfYxZHls">Video link</a>
+          <a href="https://github.com/emilyhuanyingyu/Captain_Group">Github link</a>
+        </div>
       </div>
 
-      <div class="project-photo">
-          <img src="resources/img/gb.png">
-          <h2>Group Buying</h2>
-          <h4>
-            Group-buying features different cell phone plans created by user or admin, with the group completed when a set number of people agree to join the plan.
-          </h4>
-          <ul>
-            <li>Allowed users to create and join plans.</li>
-            <li>Displayed user data and plan data in user and admin page.</li>
-            <li>Implemented Single Page Application by Angular 5.</li>
-            <li>Displayed contents in different devices responsively (CSS grid system).</li>
-          </ul>
-          <div class="links">
-              <a href="https://www.youtube.com/watch?v=H5z63dORbJY&feature=youtu.be">Video link</a>  
-              <a href="https://github.com/emilyhuanyingyu/groupBuying">Github link</a> 
-              </div>
+      <div class="project-photo" id="GroupBuying">
+        <img src="resources/img/gb.png">
+        <h2>Group Buying</h2>
+        <h4>
+          Group-buying features different cell phone plans created by user or admin, with the group completed when a set number of
+          people agree to join the plan.
+        </h4>
+        <ul>
+          <li>Allowed users to create and join plans.</li>
+          <li>Displayed user data and plan data in user and admin page.</li>
+          <li>Implemented Single Page Application by Angular 5.</li>
+          <li>Displayed contents in different devices responsively (CSS grid system).</li>
+        </ul>
+        <div class="links">
+          <a href="https://www.youtube.com/watch?v=H5z63dORbJY&feature=youtu.be">Video link</a>
+          <a href="https://github.com/emilyhuanyingyu/groupBuying">Github link</a>
         </div>
+      </div>
 
 
 
@@ -173,9 +176,9 @@
           <li>Implement users with admin or user account systems</li>
         </ul>
         <div class="links">
-            <a href="https://www.youtube.com/watch?v=vgIEqFL0lD8">Video link</a> 
-            <a href="https://github.com/emilyhuanyingyu/LearnUp">Github link</a> 
-            </div>
+          <a href="https://www.youtube.com/watch?v=vgIEqFL0lD8">Video link</a>
+          <a href="https://github.com/emilyhuanyingyu/LearnUp">Github link</a>
+        </div>
       </div>
     </div>
   </section>
