--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <div class="row">
       <h2>Projects</h2>
     </div>
-    <div class="row project-showcase">
+    <div class="row project-showcase" id="sailing">
       <div class="project-photo">
         <img src="resources/img/sailing.png">
         <br>
@@ -144,7 +144,7 @@
         </div>
       </div>
 
-      <div class="project-photo" id="GroupBuying">
+      <div class="project-photo" id="groupBuying">
         <img src="resources/img/gb.png">
         <h2>Group Buying</h2>
         <h4>
@@ -165,7 +165,7 @@
 
 
 
-      <div class="project-photo">
+      <div class="project-photo" id="learnUp">
         <img src="resources/img/learnup.png">
         <h2>Learn Up Teaching Platform</h2>
         <h4>Web app designed for a nonprofit organization in order to teach dyslexic children how to read using phonics.
