--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     <div class="hero-text-box">
       <h1 class="zoomIn animated">Hi, I'm Emily Huanying Yu</h1>
       <br>
-      <h2>Front-End Web Developer | Full Stack Developer</h2>
-      <a class="btn btn-full js--scroll-to-plans fadeInUp animated" href="resources/pdf/EmilyYu.pdf" download="resume">Download my resume</a>
+      <h2>Front-End Web Developer</h2>
+      <!-- <a class="btn btn-full js--scroll-to-plans fadeInUp animated" href="resources/pdf/EmilyYu.pdf" download="resume">Download my resume</a> -->
       <a class="btn btn-full js--scroll-to-start fadeInUp animated" href="#">Show me more</a>
     </div>
 
@@ -107,13 +107,11 @@
 
       <div class="col span-1-of-2 selfie-box">
         <p>
-          Hey I'm Emily! I am an front end web developer with my main priorities being learning and improving my skillset. I currently
-          volunteering for a non-profit organization, and I am seeking new opportunities as a front end web developer. I
-          have learned three stacks, those stacks being: MEAN, Python and IOS. Before learning how to code I was in the social
-          work industry. Realizing that it was more of a hobby than my passion, I decided to follow my true dream of learning
-          how to code. Since then I am truly in love with programming. My true goal is to enter the tech industry and become
-          a valuable and reliable asset to the future company I work for. While you're here please check out my projects!
-        </p>
+          Hey I'm Emily!  
+        </p><br>
+        <p>I am an front end web developer with my main priorities being learning and improving my skillset.</p><br>
+        <p>My true goal is to become
+          a valuable and reliable asset to the company I work for.</p>
       </div>
     </div>
   </section>
@@ -171,7 +169,7 @@
         </div>
       </div>
 
-      <div class="project-photo" id="learnUp">
+      <!-- <div class="project-photo" id="learnUp">
         <h2>Learn Up Teaching Platform</h2>
         <img src="resources/img/learnup.png">
         <h4>Web app designed for a nonprofit organization in order to teach dyslexic children how to read using phonics.
@@ -200,7 +198,7 @@
             <a href="https://github.com/emilyhuanyingyu/LearnUp">Github link</a>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </section>
 
